jpms: added one more --add-export