@@ -7,5 +7,6 @@ Add the following jvm options when running tests or application with module-syst
 --add-exports=io.grpc/io.opencensus.trace=gax
 --add-exports=io.grpc/io.opencensus.tags=google.cloud.bigtable
 --add-exports=io.grpc/io.opencensus.stats=google.cloud.bigtable
+--add-exports=io.grpc/io.opencensus.trace.propagation=com.google.api.client
 ```
 
